--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smiley Stones</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Smiley Stones Game</title>
+    <link rel="stylesheet" href="style.css"> <!-- Ensure your CSS file is linked here -->
 </head>
 <body>
     <div id="container">
@@ -18,9 +18,9 @@
         <div class="stone" id="stone8"></div>
     </div>
     <div id="popup" class="hidden">
-        Congratulations! You've made a smiley! 🎉
-        http://tinyurl.com/yuxss95p
+        <p>Congratulations! You've made a smiley! 🎉</p>
+        <p>To continue your adventure, click <a href="http://tinyurl.com/yuxss95p" target="_blank">here</a>.</p>
     </div>
-    <script src="script.js"></script>
+    <script src="script.js"></script> <!-- Ensure your JavaScript file is linked here -->
 </body>
 </html>
