--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="playArea">
+    <div id="smileyGuide"></div>
         <div class="item" id="item1"></div>
         <div class="item" id="item2"></div>
         <div class="item" id="item3"></div>
